# robot-ws

./: README.md
SerialCommsPkg/: package.xml  setup.cfg  setup.py
SerialCommsPkg/SerialCommsPkg/: lidar_node.py  serialInitialize.py
arcsai_bringup/: CMakeLists.txt  package.xml
arcsai_bringup/launch/: arcsai_app.launch.xml
connectFirebasePkg/: credentials.json  package.xml  setup.cfg  setup.py
connectFirebasePkg/connectFirebasePkg/: firebase_listener_node.py
connectFirebasePkg/install/: local_setup.sh  setup.ps1  setup.sh
connectFirebasePkg/install/connectFirebasePkg/share/connectFirebasePkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
connectFirebasePkg/log/: latest_build
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/SerialCommsPkg/lib/SerialCommsPkg/: lidar_node  serialInitialize
install/SerialCommsPkg/share/SerialCommsPkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/connectFirebasePkg/lib/connectFirebasePkg/: firebase_listener_node
install/connectFirebasePkg/share/connectFirebasePkg/: package.ps1  package.sh  package.xml
log/: latest_build
